<resources>
    <string name="app_name">Barclays</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="tab_text_1">Recommendation</string>
    <string name="tab_text_2">WatchList</string>
    <string name="marketplace">Market Place</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="search">Search eg: tesla</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_stocks_to_add_into_your_watchlist">Search Stocks to Add into your watchlist</string>
    <string name="could_not_able_to_fetch_the_recommendation">Could not able to fetch the recommendation</string>
    <string name="select_range">Select Range</string>
    <string name="_1_day">1 day</string>
    <string name="_5_day">5 day</string>
    <string name="_6_months">6 months</string>
    <string name="_1_year">1 year</string>
    <string name="_5_year">5 year</string>
    <string name="search_watchlist">Search</string>
    <string name="already_added">Already added in the WatchList</string>
    <string name="added">Added to the WatchList</string>
    <string name="could_not">Could not able to fetch the details</string>
</resources>